# GeodeLuaTemplate

./: CMakeLists.txt  mod.json  test.lua
.github/workflows/: multi-platform.yml
src/: main.cpp
src/cocos/: CCNode.cpp  CCNodeRGBA.cpp  CCObject.cpp  CCPoint.cpp  ccColor3B.cpp
